[SELC-4728] refactor test classes in core module