@@ -1,5 +1,6 @@
 package it.pagopa.selfcare.external_api.core;
 
+import it.pagopa.selfcare.commons.utils.TestUtils;
 import it.pagopa.selfcare.external_api.api.FileStorageConnector;
 import it.pagopa.selfcare.external_api.api.MsCoreConnector;
 import it.pagopa.selfcare.external_api.api.OnboardingMsConnector;
@@ -7,24 +8,23 @@ import it.pagopa.selfcare.external_api.exceptions.ResourceNotFoundException;
 import it.pagopa.selfcare.external_api.model.documents.ResourceResponse;
 import it.pagopa.selfcare.external_api.model.onboarding.InstitutionOnboarding;
 import it.pagopa.selfcare.external_api.model.token.Token;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.core.io.ClassPathResource;
 
+import java.io.IOException;
+import java.nio.file.Files;
+import java.util.Collections;
 import java.util.List;
 
-import static it.pagopa.selfcare.commons.utils.TestUtils.mockInstance;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
-
-
-@ExtendWith(MockitoExtension.class)
-class ContractServiceImplTest {
-
+@ExtendWith({MockitoExtension.class})
+class ContractServiceImplTest extends BaseServiceTestUtils {
     @InjectMocks
     private ContractServiceImpl contractService;
 
@@ -38,71 +38,60 @@ class ContractServiceImplTest {
     private OnboardingMsConnector onboardingMsConnectorMock;
 
 
-    @Test
-    void getContractV2(){
-        //given
-        final String institutionId = "institutionId";
-        final String productId = "productId";
-        final InstitutionOnboarding institutionOnboarding = new InstitutionOnboarding();
-        institutionOnboarding.setTokenId("tokenId");
-        final Token token = new Token();
-        token.setContractSigned("contractSigned");
-
-        ResourceResponse response = mockInstance(new ResourceResponse());
-        when(msCoreConnectorMock.getInstitutionOnboardings(institutionId, productId))
-                .thenReturn(institutionOnboarding);
-
-        when(onboardingMsConnectorMock.getToken(institutionOnboarding.getTokenId()))
-                .thenReturn(List.of(token));
-
-        when(storageConnectorMock.getFile(any())).thenReturn(response);
-
-        //when
-        ResourceResponse result = contractService.getContractV2(institutionId, productId);
-        //then
-        assertEquals(response, result);
-        verify(msCoreConnectorMock, times(1)).getInstitutionOnboardings(institutionId, productId);
-        verify(storageConnectorMock, times(1)).getFile(token.getContractSigned());
-        verifyNoMoreInteractions(msCoreConnectorMock, storageConnectorMock);
+    @BeforeEach
+    public void setUp() {
+        super.setUp();
     }
 
-
     @Test
-    void getContractV2_tokenSignedIsEmpty(){
-        //given
-        final String institutionId = "institutionId";
-        final String productId = "productId";
-        final InstitutionOnboarding institutionOnboarding = new InstitutionOnboarding();
+    void getContractV2() throws Exception {
+        InstitutionOnboarding institutionOnboarding = new InstitutionOnboarding();
         institutionOnboarding.setTokenId("tokenId");
-        final Token token = new Token();
-
-        when(msCoreConnectorMock.getInstitutionOnboardings(institutionId, productId))
-                .thenReturn(institutionOnboarding);
-
-        when(onboardingMsConnectorMock.getToken(institutionOnboarding.getTokenId()))
-                .thenReturn(List.of(token));
-
-        //when
-        assertThrows(ResourceNotFoundException.class, () -> contractService.getContractV2(institutionId, productId));
+        ClassPathResource inputResource = new ClassPathResource("expectations/Token.json");
+        byte[] tokenStream = Files.readAllBytes(inputResource.getFile().toPath());
+        Token token = objectMapper.readValue(tokenStream, Token.class);
+        ResourceResponse response = TestUtils.mockInstance(new ResourceResponse());
+        Mockito.when(msCoreConnectorMock.getInstitutionOnboardings("institutionId", "productId")).thenReturn(institutionOnboarding);
+        Mockito.when(onboardingMsConnectorMock.getToken(institutionOnboarding.getTokenId())).thenReturn(List.of(token));
+        Mockito.when(storageConnectorMock.getFile(token.getContractSigned())).thenReturn(response);
+        ResourceResponse result = contractService.getContractV2("institutionId", "productId");
+        Assertions.assertEquals(response, result);
     }
 
-
     @Test
-    void getContractV2_tokenNotFound(){
-        //given
-        final String institutionId = "institutionId";
-        final String productId = "productId";
-        final InstitutionOnboarding institutionOnboarding = new InstitutionOnboarding();
-        institutionOnboarding.setTokenId("tokenId");
-
-        when(msCoreConnectorMock.getInstitutionOnboardings(institutionId, productId))
-                .thenReturn(institutionOnboarding);
-
-        when(onboardingMsConnectorMock.getToken(institutionOnboarding.getTokenId()))
-                .thenReturn(List.of());
-
-        //when
-        assertThrows(ResourceNotFoundException.class, () -> contractService.getContractV2(institutionId, productId));
+    void getContractV2WhereTokenIsEmpty() {
+        InstitutionOnboarding institutionOnboarding = new InstitutionOnboarding();
+        institutionOnboarding.setTokenId(null);
+        Mockito.when(msCoreConnectorMock.getInstitutionOnboardings("institutionId", "productId")).thenReturn(institutionOnboarding);
+        Mockito.when(onboardingMsConnectorMock.getToken(institutionOnboarding.getTokenId())).thenReturn(Collections.emptyList());
+        Assertions.assertThrows(ResourceNotFoundException.class,
+                () -> contractService.getContractV2("institutionId", "productId"),
+                "Token for institutionId and productId not found!");
     }
 
+    @Test
+    void getContractV2WhereTokenIsNull() {
+        InstitutionOnboarding institutionOnboarding = new InstitutionOnboarding();
+        institutionOnboarding.setTokenId(null);
+        Mockito.when(msCoreConnectorMock.getInstitutionOnboardings("institutionId", "productId")).thenReturn(institutionOnboarding);
+        Mockito.when(onboardingMsConnectorMock.getToken(institutionOnboarding.getTokenId())).thenReturn(null);
+        Assertions.assertThrows(ResourceNotFoundException.class,
+                () -> contractService.getContractV2("institutionId", "productId"),
+                "Token for institutionId and productId not found!");
+    }
+
+    @Test
+    void getContractV2WhereContractSignedIsNull() throws IOException {
+        InstitutionOnboarding institutionOnboarding = new InstitutionOnboarding();
+        institutionOnboarding.setTokenId(null);
+        ClassPathResource inputResource = new ClassPathResource("expectations/Token.json");
+        byte[] tokenStream = Files.readAllBytes(inputResource.getFile().toPath());
+        Token token = objectMapper.readValue(tokenStream, Token.class);
+        token.setContractSigned(null);
+        Mockito.when(msCoreConnectorMock.getInstitutionOnboardings("institutionId", "productId")).thenReturn(institutionOnboarding);
+        Mockito.when(onboardingMsConnectorMock.getToken(institutionOnboarding.getTokenId())).thenReturn(List.of(token));
+        Assertions.assertThrows(ResourceNotFoundException.class,
+                () -> contractService.getContractV2("institutionId", "productId"),
+                "Token for institutionId and productId found but contract signed reference is empty!");
+    }
 }
